--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ a{
   
 }
 section{
-  margin: 50px 0px 150px 0px;
+  margin: 100px 0px;
 }
 .carousel-item{
   padding: 20px 0px 20px 70px;
@@ -32,7 +32,6 @@ section{
 }
 .my_btn:hover {
   background: black;
-  padding: 10px;
 }
 
 .img img{
